monticore-generator/src/test/resources/cocos/invalid/A4031/A4031d.mc4
package cocos.invalid.A4031;

grammar A4031d {
  external a;

}
